@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-10T08:22:28Z",
-  "count_outdated" : 2324,
-  "uniques_outdated" : 530,
-  "count" : 2365,
+  "timestamp" : "2022-08-10T16:27:23Z",
+  "count_outdated" : 2326,
+  "uniques_outdated" : 531,
+  "count" : 2366,
   "uniques" : 556,
   "clones" : [
-    {
-      "timestamp": "2022-07-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-28T00:00:00Z",
       "count": 2,
