@@ -1,12 +1,7 @@
 {
-  "count": 41,
+  "count": 40,
   "uniques": 12,
   "clones": [
-    {
-      "timestamp": "2022-07-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-28T00:00:00Z",
       "count": 2,
