@@ -1,3 +1,10 @@
+2022-08-10T16:27:23Z:
+* notice: last 14d: unq all: 12 40
+* notice: prev accum: outdated-unq outdated-all / unq all: 530 2324 / 556 2365
+* notice: next accum: outdated-unq outdated-all / unq all: 531 2326 / 556 2366
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-07-27] / []
+
 2022-08-10T08:22:28Z:
 * notice: last 14d: unq all: 12 41
 * notice: prev accum: outdated-unq outdated-all / unq all: 530 2324 / 550 2358
